Complete Milestone 6 Task S001: Configure Integration Test Environment
Major fixes and improvements:
- Fixed core template rendering issue - templates now properly build file structures
- Fixed file renderer path resolution for template files (always relative to base)
- Updated path validation to allow dotfiles like .gitignore
- Added missing template variables (license_classifier, project_type, etc.)
- Updated integration test fixtures with required variables
- Fixed CLI template test by adding correct project_type
- Created comprehensive integration test suite
- 7/12 integration tests now passing (58.3% success rate)

Updated documentation:
- Merged TODO-MILESTONE-6.md into main TODO.md
- Updated milestone status to show 2/32 tasks complete
- Documented all fixes and implementation details

This completes the critical first task of Milestone 6, unblocking further integration testing work.

--- a/create_project/templates/builtin/cli_internal_packages.yaml
+++ b/create_project/templates/builtin/cli_internal_packages.yaml
@@ -258,6 +258,6 @@ hooks:
         variables: ["create_venv"]
 
 compatibility:
-  min_python_version: "{{python_version}}"
+  min_python_version: "3.9.6"
   supported_os: ["macOS", "Linux", "Windows"]
   dependencies: ["click>=8.0.0"]
