--- a/create_project/templates/builtin/cli_single_package.yaml
+++ b/create_project/templates/builtin/cli_single_package.yaml
@@ -193,6 +193,7 @@ structure:
           variables: ["include_tests"]
         files:
           - name: "__init__.py"
+            content: ""
             description: "Test package initialization"
 
           - name: "test_{{main_module}}.py"
