--- a/create_project/templates/builtin/flask_web_app.yaml
+++ b/create_project/templates/builtin/flask_web_app.yaml
@@ -309,9 +309,9 @@ structure:
                     <header>
                       {% block header %}{% endblock %}
                     </header>
-                    {% for message in get_flashed_messages() %}
+                    {% raw %}{% for message in get_flashed_messages() %}
                       <div class="flash">{{ message }}</div>
-                    {% endfor %}
+                    {% endfor %}{% endraw %}
                     {% block content %}{% endblock %}
                   </section>
             directories:
