feat: implement Task T004 Performance Test Suite
Add comprehensive performance benchmarking and regression detection suite:

**New Test Files:**
- tests/performance/test_generation_speed.py (576 lines) - Project generation speed benchmarks
- tests/performance/test_memory_usage.py (668 lines) - Memory usage profiling and leak detection
- tests/performance/test_ui_responsiveness.py (558 lines) - UI responsiveness measurements

**Performance Test Coverage:**

### 1. Project Generation Speed Benchmarks (20 tests)
- **Template-Specific Performance**: All 6 builtin templates (Python library, CLI app, Django/Flask web apps, etc.)
- **Project Size Scaling**: Parameterized tests with 5, 15, 50, 100 files
- **Batch Operations**: Sequential generation and template switching performance
- **Template Rendering**: Variable substitution and complex template performance
- **Directory Creation**: Flat, deep, and mixed directory structure benchmarks
- **Performance Regression**: Baseline establishment and consistency testing

### 2. Memory Usage Profiling (14 tests)
- **Memory Growth Tracking**: Single and multiple project generation monitoring
- **Peak Memory Analysis**: Large project and concurrent operation profiling
- **Memory Leak Detection**: Repeated operation and template caching leak tests
- **Garbage Collection**: GC performance impact and trigger analysis
- **Template Switching**: Memory usage across different template types
- **Custom MemoryMonitor**: Utility class for detailed memory analysis

### 3. UI Responsiveness Measurements (15 tests)
- **Wizard Navigation**: Step transition response time benchmarks
- **Form Validation**: Real-time validation performance testing
- **Template Selection**: Loading and preview generation speed
- **Progress Updates**: Dialog update frequency and smoothness (60fps target)
- **Dialog Interactions**: Settings, error, AI help dialog response times
- **Background Operations**: UI responsiveness during project generation
- **Concurrent Upda

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,9 @@ markers = [
     "benchmark: mark test as a performance benchmark",
     "memory: mark test as a memory usage test",
     "stress: mark test as a stress test",
+    "gui: mark test as a GUI test",
+    "automation: mark test as an automation test",
+    "workflow: mark test as a workflow test",
 ]
 addopts = [
     "--strict-markers",
